--- a/openai-api_platform.ipynb
+++ b/openai-api_platform.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Interacting with Azure OpenAI with GenAI Gateway Capabilities by APIM**\n",
     "\n",
-    "This Jupyter Notebook demonstrates how to connect to Azure OpenAI’s API through the World Bank’s APIM endpoint using Azure Active Directory for authentication. It includes generating a chat completion response based on a prompt related to World Bank projects.\n",
+    "This Jupyter Notebook demonstrates how to connect to Azure OpenAI’s API through the APIM endpoint using Azure Active Directory for authentication. It includes generating a chat completion response based on a prompt.\n",
     "\n",
     "##### Requirements\n",
     "\n",
@@ -38,7 +38,7 @@
     "\n",
     "# initialize AzureOpenAI client\n",
     "client = AzureOpenAI(\n",
-    "    azure_endpoint=\"https://azapimdev.worldbank.org/conversationalai/v2\",\n",
+    "    azure_endpoint=\"https://azapimdev.yourdomain.com/youropenaiapi/v2\",\n",
     "    azure_ad_token_provider=token_provider,\n",
     "    api_version=\"2024-05-01-preview\"\n",
     ")"
@@ -65,14 +65,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Financial inclusion is crucial for global development as it allows underserved populations to access and use financial services, such as savings accounts, credit, insurance, and payments. It empowers individuals and businesses by providing them with the means to manage their finances, build assets, and invest in education, housing, and healthcare. By including everyone in the financial system, financial inclusion can contribute to reducing poverty, fostering economic growth, and promoting social and gender equality.\n"
+      "What are some challenges to achieving financial inclusion?.\n"
      ]
     }
    ],
    "source": [
     "#### Generate Chat Completion\n",
     "\n",
-    "#### In this section, we send a message related to a World Bank project and generate a response.\n",
+    "#### In this section, we send a message related to your project and generate a response.\n",
     "\n",
     "APIM_SUBSCRIPTION_KEY = \"insert your APIM subcription key here\"\n",
     "\n",
@@ -81,8 +81,8 @@
     "response = client.chat.completions.create(\n",
     "    model=\"gpt-35-turbo-16k\",\n",
     "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": \"You are an AI assistant helping with World Bank projects.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Explain the importance of financial inclusion in global development in 3 sentences.\"}\n",
+    "        {\"role\": \"system\", \"content\": \"You are an AI assistant helping with your projects.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Explain the importance of financial inclusion .\"}\n",
     "    ],\n",
     "    extra_headers={'api-key': APIM_SUBSCRIPTION_KEY}\n",
     "    # extra_headers={'api-key': \"insert APIM subscription key\"}\n",
@@ -103,7 +103,7 @@
     "\n",
     "#### Output\n",
     "\n",
-    "Running the above code will provide a response from the model, related to financial inclusion in the context of global development.\n",
+    "Running the above code will provide a response from the model, related to financial inclusion.\n",
     "\n",
     "##### Troubleshooting Tips:\n",
     "\n",
@@ -112,7 +112,7 @@
     "   \n",
     "2. **APIM Key Issues**:\n",
     "   - Ensure that a valid APIM subscription key is used.\n",
-    "   - Check that the key is associated with the World Bank’s APIM service.\n",
+    "   - Check that the key is associated with the APIM service.\n",
     "\n",
     "3. **Response Issues**:\n",
     "   - If the model fails to generate a response, ensure that the model name and deployment settings are correct.\n",
@@ -120,7 +120,7 @@
     "\n",
     "#### Conclusion\n",
     "\n",
-    "This notebook demonstrates how to use Azure OpenAI with Azure AD authentication to generate chat completions tailored to World Bank projects. Modify the prompt and model parameters as needed for different use cases."
+    "This notebook demonstrates how to use Azure OpenAI with Azure AD authentication to generate chat completions. Modify the prompt and model parameters as needed for different use cases."
    ]
   },
   {
@@ -133,7 +133,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qa_api_platform",
+   "display_name": "api_platform",
    "language": "python",
    "name": "python3"
   },
