--- a/openai-api_platform.ipynb
+++ b/openai-api_platform.ipynb
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What are some challenges to achieving financial inclusion?.\n"
+      "Achieving financial inclusion faces several challenges: ...\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
     "    model=\"gpt-35-turbo-16k\",\n",
     "    messages=[\n",
     "        {\"role\": \"system\", \"content\": \"You are an AI assistant helping with your projects.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Explain the importance of financial inclusion .\"}\n",
+    "        {\"role\": \"user\", \"content\": \"What are some challenges to achieving financial inclusion? .\"}\n",
     "    ],\n",
     "    extra_headers={'api-key': APIM_SUBSCRIPTION_KEY}\n",
     "    # extra_headers={'api-key': \"insert APIM subscription key\"}\n",
